# bc-gym-planning-env

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pylint_rc  setup.py  test_pylint  train_model.py
bc_gym_planning_env/: __init__.py  run_the_challange.py
bc_gym_planning_env/envs/: __init__.py  egocentric.py  mini_env.py  synth_turn_env.py  t_junction_env.py  test_synth_turn_env.py  turn_environment.py
bc_gym_planning_env/envs/base/: action.py  action_space_examples.py  draw.py  env.py  maps.py  obs.py  params.py  reward.py  spaces.py
bc_gym_planning_env/envs/envs/base/: maps.py  (+1 more)
bc_gym_planning_env/envs/internals/: error.py  maps.py  obs.py  plan_env.py
bc_gym_planning_env/envs/rw_corridors/: tdwa_test_environments.py
bc_gym_planning_env/robot_models/: differential_drive.py  interface.py  robot_dimensions_examples.py  robot_dimensions_interface.py  robot_examples_factory.py  robot_factory.py  robot_names.py  standard_robot_names_examples.py  tricycle_model.py
bc_gym_planning_env/scripts/: example_plan_env.py  random_turn_plan_env.py  rw_randomized_corridor_3_boxes.py
bc_gym_planning_env/scripts/env_runners/: arbitrary_costmap_static_path_env.py  random_mini.py  random_synthetic_turn.py  rw_randomized_corridor_3_boxes.py
bc_gym_planning_env/scripts/play/: play_mini_env.py  play_real_corridor_env.py  play_turn_env.py  test_play_real_corridor_env.py
bc_gym_planning_env/utilities/: artifacts_utils.py  coordinate_transformations.py  costmap_2d.py  costmap_2d_python.py  costmap_inflation.py  costmap_utils.py  files.py  gui.py  map_drawing_utils.py  opencv_utils.py  path_tools.py  pixel_lidar.py  planning_environment.py  robot_dimensions.py  scan_tools.py  test_coordinate_transformations.py  test_costmap_2d.py  test_costmap_utils.py  test_frozen_array.py  test_gui.py  test_map_drawing_utils.py  test_path_tools.py  test_pixel_lidar.py  test_pixel_raytracing.py  test_scan_tools.py
inc/: pixel_raytrace_module.h  pixel_raytracing_utils.h  range.h
src/: pixel_raytrace_module.cpp  pixel_raytracing_utils.cpp  python_wrapper.cpp
(+1 files in other folders)
